--- a/src/app/cat-dialog-box/kat-dialog-box.component.html
+++ b/src/app/cat-dialog-box/kat-dialog-box.component.html
@@ -1,9 +1,10 @@
 <mat-dialog-content class="dialog-content">
-  <h2 mat-dialog-title class="dialog-title">Odaberi kategoriju i podkategoriju</h2>
+  <h2 mat-dialog-title class="dialog-title">Select a category and subcategory</h2>
   <div class="form-wrapper">
     <mat-form-field appearance="outline" class="full-width">
-      <mat-label>Kategorija</mat-label>
-      <mat-select [(value)]="selectedCategory" (selectionChange)="onCategoryChange()">
+      <mat-label>Category</mat-label>
+      <mat-select [(value)]="selectedCategory" (selectionChange)="onCategoryChange()" panelClass="inline-select-panel"
+        disableOptionCentering yPosition="below">
         <mat-option *ngFor="let cat of categories" [value]="cat">
           {{ cat.name }}
         </mat-option>
@@ -11,8 +12,9 @@
     </mat-form-field>
 
     <mat-form-field appearance="outline" class="full-width" *ngIf="subcategories.length > 0">
-      <mat-label>Podkategorija</mat-label>
-      <mat-select [(value)]="selectedSubCategory">
+      <mat-label>Subcategory</mat-label>
+      <mat-select [(value)]="selectedSubCategory" panelClass="inline-select-panel-select" disqbleoptioncentering
+        yPosition="below">
         <mat-option *ngFor="let sub of subcategories" [value]="sub">
           {{ sub.name }}
         </mat-option>
@@ -22,6 +24,6 @@
 </mat-dialog-content>
 
 <mat-dialog-actions align="end" class="button-row">
-  <button mat-button mat-dialog-close>Cancel</button>
-  <button mat-flat-button color="primary" [disabled]="!selectedCategory" (click)="aplly()">Apply</button>
+  <button mat-button mat-dialog-close  class="pill-button cancel-button">Cancel</button>
+  <button mat-flat-button color="primary" [disabled]="!selectedCategory"  class="pill-button apply-button" (click)="aplly()">Apply</button>
 </mat-dialog-actions>
